--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <input type="text" placeholder="Ingrese nombre" id="name_input" />
         <p>Escoja el tamaño del cartón</p>
         <main class="options">
-          <div class="tamaño">3x3</div>
-          <div class="tamaño">4x4</div>
-          <div class="tamaño">5x5</div>
+          <div onclick="changeClass()" class="tamaño" id="3x3">3x3</div>
+          <div onclick="changeClass()" class="tamaño" id="4x4">4x4</div>
+          <div onclick="changeClass()" class="tamaño" id="5x5">5x5</div>
         </main>
         <a href="bingo.html">
           <button class="boton">Iniciar partida</button>
